--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
   postgres:
     image: postgres:10
     volumes:
-      - ./mnt/db/data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
       - ./postgres/scripts:/docker-entrypoint-initdb.d
     environment:
       POSTGRES_DB: workshop
@@ -103,3 +103,6 @@ services:
       POSTGRES_PASSWORD: w0rkzh0p
     ports:
       - "5432:5432"
+
+volumes:
+  postgres-data:
