--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - ./code/us-stock-analysis/dataset:/dataset
 
   zeppelin:
-    image: apache/zeppelin:0.7.3
+    image: dylanmei/zeppelin:0.7.3 # apache/zeppelin:0.7.3
     ports:
       - "3000:8080"
     stop_grace_period: 1m30s
@@ -65,8 +65,9 @@ services:
       - master
       - postgres
     volumes:
-      - "./zeppelin/notebook:/notebook"
-      - "./code:/app"
+      - ./zeppelin/notebook:/zeppelin/notebook
+      - ./code:/app
+      - ./code/us-stock-analysis/dataset:/dataset
     environment:
       MASTER: spark://master:7077
 
