Revert docker-compose and updated readmes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3"
 services:
-  # docs:
-  #   image: nginx
-  #   ports:
-  #     - "8888:80"
-  #   volumes:
-  #     - "./nginx/html:/usr/share/nginx/html:ro"
-  #
+  docs:
+    image: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - "./nginx/html:/usr/share/nginx/html:ro"
+
   master:
     image: arjones/spark:2.1.2
+    restart: always
     command: ["/opt/spark/sbin/start-master.sh"]
     environment:
       MASTER: spark://master:7077
@@ -24,6 +25,7 @@ services:
 
   worker1:
     image: arjones/spark:2.1.2
+    restart: always
     command: ["/opt/spark/sbin/start-slave.sh", "spark://master:7077"]
     environment:
       MASTER: spark://master:7077
@@ -39,22 +41,23 @@ services:
       - ./code:/app
       - ./dataset:/dataset
 
-  #worker2:
-  # image: arjones/spark:2.1.2
-  #  command: ["/opt/spark/sbin/start-slave.sh", "spark://master:7077"]
-  #  environment:
-  #    MASTER: spark://master:7077
-  #    SPARK_NO_DAEMONIZE: 1
-  #  depends_on:
-  #    - master
-  #  ports:
-  #    - "4040"
-  #    - "6066"
-  #    - "7077"
-  #    - "8080"
-  #  volumes:
-  #    - ./code:/app
-  #    - ./dataset:/dataset
+  worker2:
+    image: arjones/spark:2.1.2
+    restart: always
+    command: ["/opt/spark/sbin/start-slave.sh", "spark://master:7077"]
+    environment:
+      MASTER: spark://master:7077
+      SPARK_NO_DAEMONIZE: 1
+    depends_on:
+      - master
+    ports:
+      - "4040"
+      - "6066"
+      - "7077"
+      - "8080"
+    volumes:
+      - ./code:/app
+      - ./dataset:/dataset
 
   # zeppelin:
   #   image: dylanmei/zeppelin:0.7.3
@@ -95,6 +98,7 @@ services:
 
   postgres:
     image: postgres:10
+    restart: always
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./postgres/scripts:/docker-entrypoint-initdb.d
