--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   docs:
+    container_name: docs
     image: nginx
     ports:
       - "80:80"
@@ -8,6 +9,7 @@ services:
       - "./nginx/html:/usr/share/nginx/html:ro"
 
   master:
+    container_name: master
     image: arjones/spark:2.1.3
     restart: always
     command: ["/opt/spark/sbin/start-master.sh"]
@@ -24,6 +26,7 @@ services:
       - ./dataset:/dataset
 
   worker1:
+    container_name: worker1
     image: arjones/spark:2.1.3
     restart: always
     command: ["/opt/spark/sbin/start-slave.sh", "spark://master:7077"]
@@ -42,6 +45,7 @@ services:
       - ./dataset:/dataset
 
   worker2:
+    container_name: worker2
     image: arjones/spark:2.1.3
     restart: always
     command: ["/opt/spark/sbin/start-slave.sh", "spark://master:7077"]
@@ -60,18 +64,18 @@ services:
       - ./dataset:/dataset
 
   superset:
-    image: tylerfowler/superset # amancevice/superset
+    container_name: superset
+    image: tylerfowler/superset
     restart: always
     depends_on:
       - postgres
-    # environment:
-    #   MAPBOX_API_KEY: ${MAPBOX_API_KEY}
     ports:
       - "8088:8088"
     volumes:
       - ./superset/conf:/superset
 
   kafka:
+    container_name: kafka
     image: spotify/kafka
     restart: always
     ports:
@@ -82,6 +86,7 @@ services:
       ADVERTISED_PORT: 9092
 
   postgres:
+    container_name: postgres
     image: postgres:10
     restart: always
     volumes:
