--- a/spark/Dockerfile.pyspark
+++ b/spark/Dockerfile.pyspark
@@ -10,7 +10,8 @@ RUN apt-get update && \
   python3 python3-pip python3-setuptools && \
   update-alternatives --install /usr/bin/python python /usr/bin/python3.7 10 && \
   pip3 install --no-cache-dir --default-timeout=120 -r /tmp/requirements.txt && \
-  apt remove -y --purge python3-pip && \
+  apt remove -y --purge python3-pip python3-setuptools && \
+  apt autoremove -y && \
   rm -rf /tmp/requirements.txt /var/lib/apt/lists/*
 
 CMD [ "/usr/local/bin/jupyter", "notebook", "--allow-root", "--no-browser", "--ip=0.0.0.0", "--NotebookApp.token="]
