Added support to Apache Arrow

--- a/spark/requirements.txt
+++ b/spark/requirements.txt
@@ -7,3 +7,6 @@ seaborn
 # gensim install
 wheel
 gensim
+
+# https://spark.apache.org/docs/latest/sql-pyspark-pandas-with-arrow.html#apache-arrow-in-spark
+pyarrow==0.14.1
