--- a/spark/Dockerfile.pyspark
+++ b/spark/Dockerfile.pyspark
@@ -7,10 +7,10 @@ COPY requirements.txt /tmp/
 
 RUN apt-get update && \
   apt-get --no-install-recommends --no-install-suggests install -y \
-  python3 python3-pip python3-setuptools && \
+  python3 python3-pip python3-setuptools python3-distutils && \
   update-alternatives --install /usr/bin/python python /usr/bin/python3.7 10 && \
   pip3 install --no-cache-dir --default-timeout=120 -r /tmp/requirements.txt && \
-  apt autoremove -y && \
+  apt-get autoremove -y && \
   rm -rvf /tmp/requirements.txt /var/lib/apt/lists/*
 
 CMD [ "/usr/local/bin/jupyter", "notebook", "--allow-root", "--no-browser", "--ip=0.0.0.0", "--NotebookApp.token="]
