WIP: Adding Structured Streaming added queries

--- a/spark/requirements.txt
+++ b/spark/requirements.txt
@@ -10,3 +10,6 @@ gensim
 
 # https://spark.apache.org/docs/latest/sql-pyspark-pandas-with-arrow.html#apache-arrow-in-spark
 pyarrow==0.14.1
+
+# Deps for fake_stock_price_gen
+kafka-python==2.0.1
