Updating Superset image and documentation
Updating the Superset image in the docker-compose.yml to use the
amancevice/superset image which is the one recommended in the official
Superset documentation.

This image is much more up to date and doesn't suffer some of the bugs
the previous one had.

Now an extra step is required to initialize the superset database and
create the admin user.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,17 +78,6 @@ services:
       - ./dataset:/dataset
       - ./code:/app
 
-  superset:
-    container_name: superset
-    image: tylerfowler/superset
-    restart: always
-    depends_on:
-      - postgres
-    ports:
-      - "8088:8088"
-    volumes:
-      - ./superset/conf/superset_config.py:/superset/superset_config.py
-
   kafka:
     container_name: kafka
     image: spotify/kafka
@@ -114,5 +103,27 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    container_name: redis
+    image: redis
+    restart: always
+
+  superset:
+    container_name: superset
+    image: amancevice/superset
+    restart: always
+    depends_on:
+      - redis
+      - postgres
+    environment:
+      MAPBOX_API_KEY: ${MAPBOX_API_KEY}
+      SUPERSET_HOME: /etc/superset
+    ports:
+      - "8088:8088"
+    volumes:
+      - ./superset/conf/superset_config.py:/etc/superset/superset_config.py
+      - superset:/var/lib/superset
+
 volumes:
   postgres-data:
+  superset:
